--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     ".md": "markdown",
     "__locale": "c",
     "cstring": "c",
-    "socket.h": "c"
+    "socket.h": "c",
+    "libusb.h": "c"
   }
 }
