--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "bitset": "c",
     "unordered_map": "c",
     "chrono": "c",
-    "sstream": "c"
+    "sstream": "c",
+    "functions.h": "c"
   }
 }
