--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,14 @@
     "unordered_map": "c",
     "chrono": "c",
     "sstream": "c",
-    "functions.h": "c"
+    "functions.h": "c",
+    "__hash_table": "c",
+    "__string": "c",
+    "algorithm": "c",
+    "cstdio": "c",
+    "string": "c",
+    "string_view": "c",
+    "typeinfo": "c",
+    "vector": "c"
   }
 }
